// Transactions
syntax = "proto3";
option java_package = "com.wavesplatform.account.protobuf";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
    import: "com.wavesplatform.serialization.protobuf.utils._"
    flat_package: true
};

message Address {
    bytes address = 1 [(scalapb.field).type = "com.wavesplatform.account.Address"];
};

message Alias {
    bytes chainId = 1 [(scalapb.field).type = "com.wavesplatform.transaction.protobuf.ChainId"];
    string name = 2;
};

message Recipient {
    option (scalapb.message).companion_extends = "com.wavesplatform.account.protobuf.PBRecipientCompanionBase";

    oneof sealed_value {
        Address address = 2;
        Alias alias = 3;
    };
};