// Transactions
syntax = "proto3";
option java_package = "com.wavesplatform.block.protobuf";
import "scalapb/scalapb.proto";
import "transactions.proto";

option (scalapb.options) = {
    import: "com.wavesplatform.serialization.protobuf.utils._"
    flat_package: true
};

message Block {
    option (scalapb.message).extends = "com.wavesplatform.block.protobuf.PBBlockBase";
    option (scalapb.message).companion_extends = "com.wavesplatform.block.protobuf.PBBlockCompanionBase";

    message Header {
        bytes reference = 1 [(scalapb.field).type = "com.wavesplatform.common.state.ByteStr"];
        uint64 baseTarget = 2;
        bytes generationSignature = 3 [(scalapb.field).type = "com.wavesplatform.common.state.ByteStr"];
        repeated uint32 featureVotes = 4 [(scalapb.field).collection_type = "scala.collection.immutable.Set"];
        uint64 timestamp = 5;
        uint32 version = 6;
        bytes generator = 7 [(scalapb.field).type = "com.wavesplatform.account.PublicKeyAccount"];
        bytes signature = 8 [(scalapb.field).type = "com.wavesplatform.common.state.ByteStr"];
    }

    Header header = 1 [(scalapb.field).no_box = true];
    repeated Transaction transactions = 2;
}